--- a/README
+++ b/README
@@ -3,10 +3,10 @@ This program is for send keyboard event to android device via USB(adb)
 Tested in Ubuntu 9.04 with Nexus one
 
 compile:
-	make main
+	make
 
 usage: 
-	1. run program
-		./main
-	2. enjoy it
+	1. connect android device to your computer
+	2. ensure select "Settings/Application/Development/USB debugging notify" in your android device
+	3. run akb
 
